More list fixes

--- a/template.html
+++ b/template.html
@@ -188,7 +188,7 @@
         padding-top: 0pt;
         color: var(--blue);
         font-weight: 700;
-        font-size: 22pt;
+        font-size: calc(1.8 * var(--base-font-size);
         padding-bottom: 10pt;
         line-height: 1.0;
         text-align: left;
