Call out OC award

--- a/resume.html
+++ b/resume.html
@@ -417,8 +417,14 @@
     <li>Worked with GSuite team to <strong>roll out Google
     multi-login</strong>, including both managing the google.com
     domain changes and consulting on requirements for the feature's
-    roll out. Received an <strong>OC Award Honorable
-    Mention</strong>.</li>
+    roll out.
+      <ul>
+        <li>Received an <strong>OC Award Honorable Mention</strong>
+        for this work. (The OC Award is most prestigious award
+        within Google, successor to the previous Founders'
+        Award.)</li>
+      </ul>
+    </li>
   </ul>
   <h4 id="single-sign-on-sre-tech-lead-team-of-1-2008-2010-">Single
   Sign-On SRE "Tech Lead" (Team of 1) - <em>(2008 - 2010)</em></h4>
